--- a/labs/lab-01.qmd
+++ b/labs/lab-01.qmd
@@ -42,7 +42,7 @@ By the end of the lab, you will...
 -   Be familiar with the workflow using RStudio and GitHub
 -   Gain practice writing a reproducible report using Quarto
 -   Practice version control using GitHub
--   Be able to create data visualizations using `ggplot2` and use those visualizations to describe distributions
+-   Be able to produce visualizations and summary statistics to describe distributions
 -   Be able to fit, interpret, and evaluate simple linear regression models
 
 # Getting Started
@@ -125,11 +125,11 @@ We will be looking at the following variables:
 -   `spend_per_resident_data`: Average spending per resident in US dollars
 -   `pct_near_park_points`: Points assigned to the city for the percentage of residents within a ten minute walk to a park
 
-[Click here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-06-22/readme.md) for a full data dictionary
+[Click here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2021/2021-06-22/readme.md) for the data dictionary for the full data set.
 
 # Exercises
 
-**Goal:** We will be trying to understand how effective city investment on its residents is in ensuring widespread access to green areas in cities. While city investments clearly affect the creation and maintenance of parks, it is also essential that access to park facilities be equitably distributed across the population.
+**Goal:** We want to understand the effectiveness of city investment in its residents in providing widespread access to green areas in cities in the United States. While city investments clearly affect the creation and maintenance of parks, it is also essential that access to park facilities be equitably distributed across the population.
 
 ------------------------------------------------------------------------
 
@@ -141,9 +141,9 @@ Make sure we can read all of your code in your PDF document. This means you will
 
 ## Exercise 1
 
-We will begin with some exploratory data analysis (EDA). As a first step, let us take a quick summary look at the data using the `glimpse` function.
+We begin with some exploratory data analysis (EDA). As a first step, let's get a quick summary look at the data using the `glimpse` function.
 
-Viewing a summary of the data is a useful starting point for data analysis, especially if there are a large number of observations or variables.
+Viewing a summary of the data is a useful starting point for analysis, especially if there are a large number of observations or variables.
 
 ```{r}
 #| label: glimpse
@@ -181,16 +181,16 @@ parks <- # <1>
 3.  \_\_\_\_\_\_
 
 ::: render-commit-push
-This is a good place to render, commit, and push changes to your lab-01 repo on GitHub. Write an informative commit message (e.g. "Completed exercises 1 - 3"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty.
+This is a good place to render, commit, and push changes to your lab-01 repo on GitHub. Write an informative commit message (e.g., "Completed exercises 1 - 3"), and push every file to GitHub by clicking the checkbox next to each file in the Git pane. After you push the changes, the Git pane in RStudio should be empty.
 :::
 
 ## Exercise 4
 
-We will start with univariate exploratory data analysis and examine the distributions fo the variables of interest. We will visualize the variables of interest using histograms and calculate summary statistics.
+Now we'll examine the distributions of the variables of interest.
 
 -   Make a histogram of `spend_per_resident_data` and calculate summary statistics for this variable.
 
--   Comment on the features of the distribution of `spend_per_resident_data` by describing the shape, center, spread, and presence of potential outliers.
+-   Comment on the features of the distribution of this variable by describing the shape, center, spread, and presence of potential outliers.
 
 ::: callout-tip
 When performing data visualization, make sure that all your plots have clear and informative **titles** and **axis labels**. When investigating more complex relationships with many variables, this simple tip will save you and your readers a lot of time and confusion.\
@@ -204,12 +204,9 @@ Next let's explore the response variable, `pct_near_park_points`. Visualize the 
 
 ## Exercise 6
 
-Now let's conduct bivariate exploratory data analysis and examine the relationship between the two variables.
+Now let's use bivariate exploratory data analysis to look at the relationship between `spend_per_resident_data` and `pct_near_park_points`.
 
 -   Make a scatterplot to visualize the relationship between the two variables.
-
-<!-- -->
-
 -   Does there seem to be a relationship between spending and park access? If so, what is the shape and direction of the relationship?
 
 ::: render-commit-push
@@ -218,22 +215,15 @@ This is a another good place to render, commit, and push changes to your lab-01 
 
 ## Exercise 7
 
-<!--# need to reword this to match the notes-->
+We have seen the mathematical formulation for simple linear regression. In particular, given a response variable $Y$ and predictor variable $X$, the simple linear regression model is $$Y = \beta_0 + \beta_1 X + \epsilon, \quad \epsilon \sim N(0, \sigma_\epsilon^2)$$
 
-In class, we have gone through the mathematical formulation of a simple linear regression. In particular, given a response variable $Y$ and predictor variable $X$, the simple linear regression model is $$Y = \beta_0 + \beta_1 X + \epsilon, \quad \epsilon \sim N(0, \sigma_\epsilon^2)$$
-
-for some unknown **regression coefficients** $(\beta_0, \beta_1)$. This means that the **expected value** of each observation lies on the **regression line**
-
-\
+for some unknown regression coefficients for slope and intercept$(\beta_0, \beta_1)$. This means that the expected value of each observation lies on the regression line\
 $$ E(Y|X) = \beta_0 + \beta_1 X$$
 
-Answer the following questions about simple linear regression. Your response should be in terms simple linear regression, in general. It should <u>not</u> be specific to the parks data.
+Answer the following questions about simple linear regression. Your response should be in general terms about simple linear, <u>not</u> be specific to the `parks` data.
 
--   What does it mean for the expected value of $Y$ to be given by $\beta_0 + \beta_1 X$?
-
-<!-- -->
-
--   What is the interpretation of the coefficients $\beta_0$ and $\beta_i$ in terms of the expected value of $Y$?
+-   What does $E(Y|X) = \beta_0 + \beta_1X$ mean in terms of a given value of $X$?
+-   What is the interpretation of the coefficients $\beta_0$ and $\beta_1$ in terms of the expected value of $Y$?
 
 ## Exercise 8
 
@@ -243,7 +233,7 @@ $$
 \mathbf{Y} = \mathbf{X}\boldsymbol{\beta} + \mathbf{\epsilon}
 $$
 
-Estimate regression coefficients $\hat{\boldsymbol{\beta}}$ using the matrix representation. Show your work and/or code to get the answer.
+Estimate regression coefficients $\hat{\boldsymbol{\beta}}$ for the model using `spend_per_resident_data` to explain variabilty in `park_near_pct_points` using the matrix representation. Show your work and/or code to get the answer.
 
 ## Exercise 9
 
