--- a/labs/lab-01.qmd
+++ b/labs/lab-01.qmd
@@ -287,4 +287,4 @@ To submit your assignment:
 | Ex 10                 | 5      |
 | Workflow & formatting | 4      |
 
-The "Workflow & formatting" grade is to assess the reproducible workflow and document format. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date in the YAML.
+The "Workflow & formatting" grade is to assess the reproducible workflow and document format. This includes having at least 3 informative commit messages, a neatly organized document with readable code and your name and the date updated in the YAML.
