--- a/slides/05-slr-matrix-contd.qmd
+++ b/slides/05-slr-matrix-contd.qmd
@@ -1,7 +1,8 @@
 ---
 title: "SLR: Matrix representation"
+subtitle: "cont'd"
 author: "Prof. Maria Tackett"
-date: "2024-09-05"
+date: "2024-09-10"
 date-format: "MMM DD, YYYY"
 footer: "[🔗 STA 221 - Fall 2024](https://sta221-fa24.netlify.app)"
 logo: "../images/logo.png"
@@ -41,6 +42,16 @@ knitr::opts_chunk$set(
 )
 ```
 
+## Announcements
+
+-   Lab 01 due on **Thursday, September 12 at 11:59pm**
+
+    -   Push work to GitHub repo
+
+    -   Submit final PDF on Gradescope + mark pages for each question
+
+-   HW 01 will be assigned on Thursday
+
 ## Topics
 
 -   Matrix representation for simple linear regression
@@ -69,21 +80,9 @@ ggplot2::theme_set(ggplot2::theme_bw())
 
 # Matrix representation of simple linear regression
 
-## SLR: Statistical model (population)
+## SLR in matrix form {.midi}
 
-When we have a quantitative response, $Y$, and a single quantitative predictor, $X$, we can use a **simple linear regression** model to describe the relationship between $Y$ and $X$. $$\large{Y = \mathbf{\beta_0 + \beta_1 X} + \epsilon}, \hspace{8mm} \epsilon \sim N(0, \sigma_{\epsilon}^2)$$
-
-<br>
-
--   $\beta_1$: Population (true) slope of the relationship between $X$ and $Y$
--   $\beta_0$: Population (true) intercept of the relationship between $X$ and $Y$
--   $\epsilon$: Error
-
-## SLR in matrix form
-
-Suppose we have $n$ observations.
-
-$$
+Suppose we have $n$ observations, a quantitative response variable, and a single predictor$$
 \underbrace{
 \begin{bmatrix}
 y_1 \\
@@ -121,46 +120,29 @@ $$
 
 <br>
 
-::: question
-What are the dimensions of $\mathbf{y}$, $\mathbf{X}$, $\boldsymbol{\beta}$, and $\boldsymbol{\epsilon}$?
-:::
-
-## Sum of squared residuals
-
-We use the sum of squared residuals (also called "sum of squared error") to find the least squares line:
-
-$$
-SSR = \sum_{i=1}^ne_i^2 = \mathbf{e}^T\mathbf{e} = (\mathbf{y} - \hat{\mathbf{y}})^T(\mathbf{y} - \hat{\mathbf{y}})
-$$
-
-<br>
-
-::: question
--   What is the dimension of SSR?
-
--   What is $\hat{\mathbf{y}}$ in terms of $\mathbf{y}$, $\mathbf{X}$, and/or $\boldsymbol{\beta}$ ?
-:::
+-   $\mathbf{y}$: $n\times 1$ vector of responses
+-   $\mathbf{X}$: $n \times 2$ design matrix <!--# another way to describe this without using design matrix?-->
+-   $\boldsymbol{\beta}$: $2 \times 1$ vector of coefficients
+-   $\boldsymbol{\epsilon}$: $n \times 1$ vector of error terms
 
 ## Minimize sum of squared residuals
 
-We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+**Goal**: Find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
 \begin{aligned}
-\mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
+SSR = \sum_{i=1}^n e_i^2 = \mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
 \end{aligned}
 $$
 
-## Minimize sum of squared residuals
-
-We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+Minimize sum of squared residuals $$
 \begin{aligned}
-\mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
+SSR = \mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
 &= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
 \end{aligned}
 $$
 
 ## Minimize sum of squared residuals
 
-We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+$$
 \begin{aligned}
 \mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
 &= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
@@ -168,9 +150,13 @@ We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_
 \end{aligned}
 $$
 
+. . .
+
+$\mathbf{y}^T\mathbf{X}\boldsymbol{\beta}$ and $\boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y}$ are scalars. Therefore, $\mathbf{y}^T\mathbf{X}\boldsymbol{\beta} = (\mathbf{y}^T\mathbf{X}\boldsymbol{\beta})^T = \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y}$
+
 ## Minimize sum of squared residuals
 
-We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize the sum of squared residuals $$
+$$
 \begin{aligned}
 \mathbf{e}^T\mathbf{e} &= (\mathbf{y} - \mathbf{X}\boldsymbol{\beta})^T(\mathbf{y} - \mathbf{X}\boldsymbol{\beta}) \\[10pt]
 &= (\mathbf{y}^T - \boldsymbol{\beta}^T\mathbf{X}^T)(\mathbf{y} - \mathbf{X}\boldsymbol{\beta})\\[10pt]
@@ -179,23 +165,89 @@ We want to find values of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_
 \end{aligned}
 $$
 
-## Least squares estimators
+## Minimize sum of squared residuals
+
+The estimate of $\boldsymbol{\beta} = \begin{bmatrix}\beta_0 \\ \beta_1 \end{bmatrix}$ that minimize SSR is the one such that
 
 $$
-SSR = \mathbf{e}^T\mathbf{e} =\mathbf{y}^T\mathbf{y} - 2\boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}
+\nabla_{\boldsymbol{\beta}} SSR = \nabla_{\boldsymbol{\beta}}( \mathbf{y}^T\mathbf{y} - 2\boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}) = 0
 $$
 
-<br>
+## Side note: Vector operations {.midi}
 
-. . .
+Let $\mathbf{x} = \begin{bmatrix}x_1 \\ x_2 \\ \vdots \\x_k\end{bmatrix}$be a $k \times 1$ vector and $f(\mathbf{x})$ be a function of $\mathbf{x}$.
 
-The least squares estimators must satisfy
+Then $\nabla_\mathbf{x}f$, the **gradient** of $f$ with respect to $\mathbf{x}$ is
 
 $$
-\nabla_{\boldsymbol{\beta}} SSR = -2\mathbf{X}^T\mathbf{y} + 2\mathbf{X}^T\mathbf{X}\boldsymbol{\beta} = 0
+\nabla_\mathbf{x}f = \begin{bmatrix}\frac{\partial f}{\partial x_1} \\ \frac{\partial f}{\partial x_2} \\ \vdots \\ \frac{\partial f}{\partial x_k}\end{bmatrix}
 $$
 
-<br>
+## Side note: Vector operations
+
+::: {.callout-note icon="false"}
+## Proposition 1
+
+Let $\mathbf{x}$ be a $k \times 1$ vector and $\mathbf{z}$ be a $k \times 1$ vector, such that $\mathbf{z}$ is not a function of $\mathbf{x}$ .
+
+The gradient of $\mathbf{x}^T\mathbf{z}$ with respect to $\mathbf{x}$ is
+
+$$
+\nabla_\mathbf{x} \hspace{1mm} \mathbf{x}^T\mathbf{z} = \mathbf{z}
+$$
+:::
+
+## Side note: Proposition 1
+
+$$
+\begin{aligned}
+\mathbf{x}^T\mathbf{z} &= \begin{bmatrix}x_1 & x_2 & \dots &x_k\end{bmatrix} 
+ \begin{bmatrix}z_1 \\ z_2 \\ \vdots \\z_k\end{bmatrix} \\[10pt]
+ &= x_1z_1 + x_2z_2 + \dots + x_kz_k
+\end{aligned}
+$$
+
+## Side note: Proposition 1 {.midi}
+
+$$
+\nabla_\mathbf{x}\hspace{1mm}\mathbf{x}^T\mathbf{z} = \begin{bmatrix}\frac{\partial \mathbf{x}^T\mathbf{z}}{\partial x_1} \\ \frac{\partial \mathbf{x}^T\mathbf{z}}{\partial x_2} \\ \vdots \\ \frac{\partial \mathbf{x}^T\mathbf{z}}{\partial x_k}\end{bmatrix}  
+= \begin{bmatrix}\frac{\partial}{\partial x_1} (x_1z_1 + x_2z_2 + \dots + x_kz_k) \\ \frac{\partial}{\partial x_2} (x_1z_1 + x_2z_2 + \dots + x_kz_k)\\ \vdots \\ \frac{\partial}{\partial x_k} (x_1z_1 + x_2z_2 + \dots + x_kz_k)\end{bmatrix}
+ = \begin{bmatrix} z_1 \\ z_2 \\ \vdots \\ z_k\end{bmatrix} = \mathbf{z}
+$$
+
+## Side note: Vector + matrix operations
+
+::: {.callout-note icon="false"}
+## Proposition 2
+
+Let $\mathbf{x}$ be a $k \times 1$ vector and $\mathbf{A}$ be a $k \times k$ matrix, such that $\mathbf{A}$ is not a function of $\mathbf{x}$ .
+
+Then the gradient of $\mathbf{x}^T\mathbf{A}\mathbf{x}$ with respect to $\mathbf{x}$ is
+
+$$
+\nabla_\mathbf{x} \hspace{1mm} \mathbf{x}^T\mathbf{A}\mathbf{x} = (\mathbf{A}\mathbf{x} + \mathbf{A}^T \mathbf{x}) = (\mathbf{A} + \mathbf{A}^T)\mathbf{x}
+$$
+
+If $\mathbf{A}$ is symmetric, then
+
+$$
+(\mathbf{A} + \mathbf{A}^T)\mathbf{x} = 2\mathbf{A}\mathbf{x}
+$$
+:::
+
+## Side note: Proposition 2
+
+## Find the least squares estimators
+
+$$
+\begin{aligned}
+\nabla_{\boldsymbol{\beta}} SSR &= \nabla_{\boldsymbol{\beta}}( \mathbf{y}^T\mathbf{y} - 2\boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}) = 0 \\[10pt]
+& = \nabla_\boldsymbol{\beta} \hspace{1mm} \mathbf{y}^T\mathbf{y} - 2\nabla_\boldsymbol{\beta} \hspace{1mm} \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{y} + \nabla_\boldsymbol{\beta} \hspace{1mm} \boldsymbol{\beta}^T\mathbf{X}^T\mathbf{X}\boldsymbol{\beta} \\[10pt]
+&= 0 - \underbrace{2\mathbf{X}^T\mathbf{y}}_{\text{Prop }1} + \underbrace{2\mathbf{X}^T\mathbf{X}\boldsymbol{\beta}}_{\text{Prop }2}
+\end{aligned}
+$$
+
+<!--# finish adding the steps here-->
 
 . . .
 
